# sintablegen

./: CMakeLists.txt  README.md  meson.build
src/: main.c
